Ex3_Hypertension_Mapping/Hypertension/GpMessages/1512082938585300
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Sunday, October 1, 2023 12:05:58 PM</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    Not High
        ^
SyntaxError: unexpected EOF while parsing
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Sunday, October 1, 2023 12:05:58 PM (Elapsed Time: 0.37 seconds)</msg></messages>